[tool.poetry]
name = "cato"
version = "0.51.1"
description = "Cato is a visual regression testing tool intended for the development of vfx production renderers"
authors = ["Jan Honsbrok <jan.honsbrok@gmail.com>"]
include = [
    "cato_server/static/**/*",
    "cato_api_models/**/*"
]
packages = [
    { include = "cato" },
    { include = "cato_server" },
    { include = "cato_api_client" },
    { include = "cato_api_models" },
    { include = "cato_common" },
]

[tool.poetry.scripts]
cato = 'cato.__main__:main'
cato_server_admin = 'cato_server.cato_server_admin:main'
db_load_generator = 'cato_server.db_load_generator:main'

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
emoji = "^1.2.0"
pinject = "^0.14.1"
jsonschema = "^3.2.0"
contexttimer = "^0.3.3"
humanfriendly = "^9.1"
tabulate = "^0.8.9"
Jinja2 = "^2.11.2"
alembic = "^1.4.3"
SQLAlchemy = "^1.3.20"
py-cpuinfo = "^7.0.0"
psutil = "^5.7.3"
gevent = "^21.1.2"
marshmallow = "^3.9.1"
requests = "^2.25.0"
marshmallow-enum = "^1.5.1"
python-dateutil = "^2.8.1"
pathvalidate = "^2.3.1"
future = "^0.18.2"
schedule = "^1.0.0"
psycopg2-binary = "^2.8.6"
fastapi = "^0.65.2"
uvicorn = "^0.13.4"
aiofiles = "^0.7.0"
python-multipart = "^0.0.5"
Pillow = "^9.0.0"
opencv-python = "^4.5.2"
sentry-sdk = "^1.4.3"
passlib = "^1.7.4"
email-validator = "^1.1.3"
numpy = "1.21.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.2"
mypy = "^0.812"
bumpversion = "^0.6.0"
coverage = "^5.3"
flake8 = "^3.8.4"
flake8-print = "^4.0.0"
GitPython = "^3.1.11"
snapshottest = "^0.6.0"
selenium = "^3.141.0"
Faker = "^6.4.1"
pytest-postgresql = "^2.6.1"
checksumdir = "^1.2.0"
webdriver-manager = "^3.4.2"
types-Pillow = "^8.3.1"
sqlalchemy-stubs = "^0.4"
types-psutil = "^5.8.0"
types-jsonschema = "^3.2.0"
pygount = "^1.2.4"
freezegun = "^1.1.0"
pytest-html = "^3.1.1"
pytest-flakefinder = "^1.0.0"
pytest-xdist = "^2.5.0"
pytest-rerunfailures = "^10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
