[tool.poetry]
name = "cato"
version = "0.58.0"
description = "Cato is a visual regression testing tool intended for the development of vfx production renderers"
authors = ["Jan Honsbrok <jan.honsbrok@gmail.com>"]
include = [
    "cato_server/static/**/*",
]
packages = [
    { include = "cato" },
    { include = "cato_server" },
    { include = "cato_api_client" },
    { include = "cato_common" },
]

[tool.poetry.scripts]
cato = 'cato.__main__:main'
cato_server_admin = 'cato_server.cato_server_admin:main'
cato_beat = 'cato_server.cato_beat:main'
cato_worker = 'cato_server.cato_worker:main'
db_load_generator = 'cato_server.db_load_generator:main'

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
emoji = "^1.7.0"
pinject = "^0.14.1"
jsonschema = "^3.2.0"
contexttimer = "^0.3.3"
humanfriendly = "^9.2"
tabulate = "^0.8.10"
Jinja2 = "^3.1.2"
alembic = "^1.8.1"
SQLAlchemy = "^1.4.39"
py-cpuinfo = "^7.0.0"
psutil = "^5.9.1"
gevent = "^21.12.0"
marshmallow = "^3.17.0"
requests = "^2.28.1"
marshmallow-enum = "^1.5.1"
python-dateutil = "^2.8.2"
pathvalidate = "^2.5.0"
future = "^0.18.2"
schedule = "^1.1.0"
psycopg2-binary = "^2.9.3"
fastapi = "^0.65.3"
uvicorn = "^0.18.2"
aiofiles = "^0.7.0"
python-multipart = "^0.0.5"
Pillow = "^9.2.0"
opencv-python-headless = "^4.6.0.66"
sentry-sdk = "^1.8.0"
passlib = "^1.7.4"
email-validator = "^1.2.1"
numpy = "1.21.5"
case-converter = "^1.1.0"
itsdangerous = "^2.1.2"
Authlib = "^1.0.1"
httpx = "0.23.0"
starlette-csrf = "^1.4.4"
tenacity = "^8.0.1"
celery = {extras = ["rabbitmq"], version = "^5.2.7"}
jsonpath-ng = "^1.5.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^6.2.5"
mypy = "^0.812"
bumpversion = "^0.6.0"
coverage = "^5.5"
flake8 = "^3.9.2"
flake8-print = "^4.0.1"
GitPython = "^3.1.27"
snapshottest = "^0.6.0"
selenium = "^3.141.0"
Faker = "^6.6.3"
pytest-postgresql = "^2.6.1"
checksumdir = "^1.2.0"
webdriver-manager = "^3.8.1"
types-Pillow = "^8.3.11"
sqlalchemy-stubs = "^0.4"
types-psutil = "^5.9.1"
types-jsonschema = "^3.2.1"
pygount = "^1.4.0"
freezegun = "^1.2.1"
pytest-html = "^3.1.1"
pytest-flakefinder = "^1.0.0"
pytest-xdist = "^2.5.0"
pytest-rerunfailures = "^10.2"
py-typescript-generator = {git = "https://github.com/Latios96/py-typescript-generator.git", rev = "v0.1.3"}
testcontainers = "3.4.2"
python-keycloak = "^0.27.1"
pywin32 = { version = "^303", markers = "sys_platform == 'win32'" }
asyncmock = "^0.4.2"
pytest-asyncio = "^0.18.3"
pytest-celery = "^0.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
