[tool.poetry]
name = "cato"
version = "0.62.0"
description = "Cato is a visual regression testing tool intended for the development of vfx production renderers"
authors = ["Jan Honsbrok <jan.honsbrok@gmail.com>"]
include = [
    "cato_server/static/**/*",
]
packages = [
    { include = "cato" },
    { include = "cato_server" },
    { include = "cato_api_client" },
    { include = "cato_common" },
]

[tool.poetry.scripts]
cato = 'cato.__main__:main'
cato_server_admin = 'cato_server.cato_server_admin:main'
cato_beat = 'cato_server.cato_beat:main'
cato_worker = 'cato_server.cato_worker:main'
db_load_generator = 'cato_server.db_load_generator:main'

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
emoji = "^2.1.0"
pinject = "^0.14.1"
jsonschema = "^4.16.0"
contexttimer = "^0.3.3"
humanfriendly = "^10.0"
tabulate = "^0.9.0"
Jinja2 = "^3.1.2"
alembic = "^1.8.1"
SQLAlchemy = "^1.4.42"
py-cpuinfo = "^9.0.0"
psutil = "^5.9.3"
gevent = "^22.10.1"
marshmallow = "^3.18.0"
requests = "^2.28.1"
marshmallow-enum = "^1.5.1"
python-dateutil = "^2.8.2"
pathvalidate = "^2.5.2"
future = "^0.18.2"
schedule = "^1.1.0"
psycopg2-binary = "^2.9.5"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
aiofiles = "^22.1.0"
python-multipart = "^0.0.5"
Pillow = "^9.2.0"
opencv-python-headless = "^4.6.0.66"
sentry-sdk = "^1.10.1"
passlib = "^1.7.4"
email-validator = "^1.3.0"
numpy = "^1.23.4"
case-converter = "^1.1.0"
itsdangerous = "^2.1.2"
Authlib = "^1.1.0"
httpx = "0.23.0"
starlette-csrf = "^1.4.4"
tenacity = "^8.1.0"
celery = {extras = ["rabbitmq"], version = "^5.2.7"}
marshmallow-polyfield = "^5.11"
url-normalize = "^1.4.3"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
mypy = "^0.982"
bumpversion = "^0.6.0"
coverage = "^6.5.0"
flake8 = "^5.0.4"
flake8-print = "^5.0.0"
GitPython = "^3.1.29"
snapshottest = "^0.6.0"
selenium = "^4.5.0"
Faker = "^15.1.1"
pytest-postgresql = "^3.1.2"
checksumdir = "^1.2.0"
webdriver-manager = "^3.8.4"
types-Pillow = "^9.2.2.2"
sqlalchemy-stubs = "^0.4"
types-psutil = "^5.9.5.4"
types-jsonschema = "^4.16.1.1"
pygount = "^1.4.0"
freezegun = "^1.2.2"
pytest-html = "^3.2.0"
pytest-flakefinder = "^1.1.0"
pytest-xdist = "^3.0.2"
pytest-rerunfailures = "^10.2"
py-typescript-generator = {git = "https://github.com/Latios96/py-typescript-generator.git", rev = "v0.3.0"}
testcontainers = "3.4.2"
python-keycloak = "^2.6.0"
pywin32 = { version = "^303", markers = "sys_platform == 'win32'" }
asyncmock = "^0.4.2"
pytest-asyncio = "^0.20.1"
pytest-celery = "^0.0.0"
sqltap = "^0.3.11"

[tool.poetry.group.dev.dependencies]
types-emoji = "^2.1.0"
types-tabulate = "^0.9.0.0"
types-python-dateutil = "^2.8.19.2"
types-requests = "^2.28.11.2"
pytest-timeout = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
